Fix truncation styling.

--- a/packages/terra-clinical-item-display/src/ItemDisplay.scss
+++ b/packages/terra-clinical-item-display/src/ItemDisplay.scss
@@ -28,7 +28,6 @@
   width: 16px;
 }
 
-.terraClinical-ItemDisplay-text,
 .terraClinical-ItemDisplay-text--isTruncated {
   @include terra-clinical-text-truncate;
 }
